Task #13231 - Fix Lite login form alignment
- On index.html, bottom image is now DIV background
- Added max-height to DIV

--- a/src/login.css
+++ b/src/login.css
@@ -26,17 +26,15 @@
         background-position:50% 40%; background-size:100%; }
 }
 
-#credent { border-radius:12px; }
+#credent { background:url("img/logo-expressobr-bottom.png") no-repeat bottom; }
 @media (max-width:1024px) { /* mobile */
-    #credent { width:100%; height:100%; text-align:center; }
+    #credent { width:100%; height:100%; text-align:center; min-height:500px; }
     #logo-top { margin-top:16px; }
-    #logo-bottom { position:absolute; width:100%; left:0; bottom:0; display:block; z-index:-1; }
 }
 @media (min-width:1025px) { /* desktop */
-    #credent { position:absolute; right:20%; top:18%; width:320px; background-color:white;
-        text-align:center; box-shadow:2px 2px 6px #999; }
+    #credent { position:absolute; right:20%; top:18%; width:320px; height:490px;
+        border-radius:12px; background-color:white; text-align:center; box-shadow:2px 2px 6px #999; }
     #logo-top { margin-top:20px; }
-    #logo-bottom { border-radius:12px; width:100%; display:block; }
 }
 
 #frmLogin { margin:18px 20px 60px 20px; padding-top:30px; border-top:1px solid #E8E8E8; }
